--- a/cacti/branches/0.8.8/include/themes/classic/main.css
+++ b/cacti/branches/0.8.8/include/themes/classic/main.css
@@ -315,6 +315,15 @@ legend {
 	padding-left: 5px;
 }
 
+.hyperLink {
+	color: blue;
+	font-size: 12px;
+	padding: 3px;
+	cursor:pointer;
+	text-decoration: none;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
 .linkEditMain, .linkEditMain:visited, .linkEditMain:active {
 	color: blue;
 	text-decoration: none;
